Fixed adaptability on mobile screens

--- a/src/Styles/Components/Social-networks.less
+++ b/src/Styles/Components/Social-networks.less
@@ -29,10 +29,18 @@
     &:hover,
     &:focus,
     &.is-active {
-      color: lighten(#62dcf6, 15%);
+      color: darken(#f3f1e9, 10%);
       text-decoration: none;
       transform: scale(2.1);
     }
+  }
+}
+
+
+@media (max-width: 992px) {
+  .Social-networks-menu {
+    width: 15%;
+    padding: 0 15px;
   }
 }
 
@@ -42,7 +50,6 @@
     width: 15%;
   }
 }
-
 
 @media (max-width: 865px) {
   .Social-networks-menu {
@@ -96,17 +103,20 @@
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 575px) {
   .Social-networks-menu {
-    width: 15%;
-    padding: 0 15px;
-  }
-}
 
-@media (max-width: 767px) {
-  .Social-networks-menu  {
-    width: 100%;
-    padding: 0;
+    &__list {
+      padding: 0 70px;
+    }
+
+    &__link {
+      width: 30px;
+    }
+
+    &__subheader {
+      letter-spacing: 3px;
+    }
   }
 }
 
@@ -125,7 +135,6 @@
       letter-spacing: 3px;
     }
   }
-
 }
 
 @media (max-width: 320px)  {
